--- a/package.json
+++ b/package.json
@@ -1,9 +1,63 @@
 {
+  "name": "marketview",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "three": "^0.153.0"
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.11",
+    "@mui/system": "^5.11.11",
+    "@mui/x-data-grid": "^6.0.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.11.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.2",
+    "@react-three/fiber": "^8.13.0",
+    "@total-typescript/ts-reset": "^0.3.7",
+    "@upstash/ratelimit": "^0.3.9",
+    "@upstash/redis": "^1.20.1",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.0.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.122.0",
+    "nanoid": "^4.0.1",
+    "next": "13.4.4",
+    "next-auth": "^4.20.1",
+    "next-themes": "^0.2.1",
+    "openai": "^3.2.1",
+    "prism-react-renderer": "^1.3.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.4",
+    "react-hot-toast": "^2.4.0",
+    "sharp": "^0.31.3",
+    "simplebar-react": "^3.2.1",
+    "tailwind-merge": "^1.10.0",
+    "three": "^0.153.0",
+    "zod": "^3.21.0"
   },
   "devDependencies": {
-    "vite": "^4.3.9"
-  },
-  "type": "module"
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.152.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prisma": "^4.15.0",
+    "tailwindcss": "^3.2.7",
+    "tailwindcss-animate": "^1.0.5",
+    "typescript": "^4.9.5"
+  }
 }
