--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -15,7 +18,7 @@
     "@mui/system": "^5.11.11",
     "@mui/x-data-grid": "^6.0.0",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^4.15.0",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-scroll-area": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.2",
@@ -23,11 +26,13 @@
     "@total-typescript/ts-reset": "^0.3.7",
     "@upstash/ratelimit": "^0.3.9",
     "@upstash/redis": "^1.20.1",
+    "@vercel/postgres": "^0.3.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.4.4",
+    "finnhub": "^1.2.17",
     "framer-motion": "^10.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.122.0",
