--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hot-toast": "^2.4.0",
     "sharp": "^0.31.3",
     "simplebar-react": "^3.2.1",
+    "swr": "^2.1.5",
     "tailwind-merge": "^1.10.0",
     "three": "^0.153.0",
     "zod": "^3.21.0"
@@ -59,6 +60,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/three": "^0.152.1",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-styled-components": "^2.1.3",
     "postcss": "^8.4.21",
     "prisma": "^4.15.0",
     "tailwindcss": "^3.2.7",
