--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@upstash/redis": "^1.20.1",
     "@vercel/postgres": "^0.3.0",
     "class-variance-authority": "^0.4.0",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "eslint": "8.35.0",
@@ -47,6 +48,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.4",
     "react-hot-toast": "^2.4.0",
+    "react-responsive": "^9.0.2",
     "sharp": "^0.31.3",
     "simplebar-react": "^3.2.1",
     "swr": "^2.1.5",
